--- a/application/modules/default/views/scripts/settings/partials/website.phtml
+++ b/application/modules/default/views/scripts/settings/partials/website.phtml
@@ -20,17 +20,8 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 ?>
-<div class="panel-heading">
-    <h4 class="panel-title">
-        <a data-toggle="collapse" href="#website-collapse" data-parent="#accordion" id="website-trigger">
-            <span class="glyphicon glyphicon-globe"></span>
-            <?= $this->translate('Your Website') ?>
-            <span class="absolute glyphicon glyphicon-chevron-down"></span>
-        </a>
-    </h4>
-</div>
 
-<div class="panel-collapse collapse" id="website-collapse">
+<div class="panel-collapse " id="website-collapse">
     <div class="panel-body">
         <form class="standard-form well partial" action="<?= $this->homepageform->getAction(); ?>"
               method="<?= $this->homepageform->getMethod(); ?>" data-target="#form-website"
